--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>board</title>
 </head>
 <body>
+<th:block th:replace="~{/layout/basic :: setContent(~{this::content})}">
+    <th:block th:fragment="content">
 
+        <div class="container">
+            <h2>게시글 목록</h2>
+            <table th:class="table">
+                <colgroup>
+                    <col th:width="${'15%'}"/>
+                    <col th:width="${'*'}"/>
+                    <!--<col th:width="${'15%'}"/>-->
+                    <col th:width="${'20%'}"/>
+                    <col th:width="${'20%'}"/>
+                </colgroup>
+                <thead>
+                <tr>
+                    <th scope="col">글번호</th>
+                    <th scope="col">제목</th>
+                    <!--<th scope="col">조회수</th>-->
+                    <th scope="col">작성일</th>
+                    <th scope="col">수정일</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:if="${#lists.size(list)} > 0" th:each="list : ${list}">
+                    <td th:text="${list.bno}"></td>
+                    <!-- 여기 -->
+                    <td class="title"><a href="/board/get/" th:attrappend="href=${list.bno}" th:text="${list.title}"></a></td>
+                    <!--<td th:text="${list.viewcnt}"></td>-->
+                    <td th:text="${list.regDate}"></td>
+                    <td th:text="${list.updateDate}"></td>
+                </tr>
+                <tr th:unless="${#lists.size(list)} > 0">
+                    <td colspan="4">조회된 결과가 없습니다.</td>
+                </tr>
+                </tbody>
+            </table>
+            <!-- 여기 -->
+            <a href="/board/regist" class="btn">글 쓰기</a>
+        </div>
+    </th:block>
+</th:block>
 </body>
 </html>
